# tamatebako

./: Cargo.toml  README.md  config.sample.toml
src/: config.rs  database.rs  main.rs  web.rs
src/collector/: git.rs  github.rs
