[package]
name = "tamatebako"
version = "0.1.0"
authors = ["Hideo Hattori <hhatto.jp@gmail.com>"]

[dependencies]
dirs = "1.0.3"
toml = "0.4"
structopt = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
git2 = "0.7"
regex = "1"
lazy_static = "1.1.0"
log = "0.4.0"
env_logger = "0.5.13"
diesel = { version = "1.3.0", features = ["sqlite", "chrono"] }
chrono = "0.4"
csv = "1"
reqwest = "0.9.1"
url = "1.7.1"
actix = "0.7"
actix-web = "0.7"
clap = "2.21"

[profile.release]
opt-level=3
