[package]
name = "tamatebako"
version = "0.1.0"
description = "version checker for OSS Projects"
authors = ["Hideo Hattori <hhatto.jp@gmail.com>"]
edition = "2021"

[dependencies]
dirs = "2"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
git2 = "0.18"
regex = "1"
lazy_static = "1.1.0"
log = "0.4.0"
env_logger = "0.11"
diesel = { version = "2.1", features = ["sqlite", "chrono"] }
chrono = "0.4"
csv = "1"
reqwest = { version = "0.11", features = ["json"] }
url = "2"
actix-web = "4"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level=3
